bk_ida/gccida/g1/peep2_find_free_register
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3429:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v8].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3432:32: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( live, peep2_insn_data_0[v8].live_before); 
                               ^~~~~~~~~~~~~~~~~
                               peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3437:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v8].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3440:38: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
reg_set_to_hard_reg_set( &this_live, peep2_insn_data_0[v8].live_before); 
                                     ^~~~~~~~~~~~~~~~~
                                     peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3522:7: error: use of undeclared identifier 'search_ofs_1'
v21 = search_ofs_1 + v12; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3523:6: error: use of undeclared identifier 'search_ofs_1'
if ( search_ofs_1 + v12 > 52 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3524:7: error: use of undeclared identifier 'search_ofs_1'
v21 = search_ofs_1 + v12 - 53; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3537:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = ( unsigned int)( mode_class_0[mode] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3568:1: error: use of undeclared identifier 'search_ofs_1'
search_ofs_1 = 0; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3581:24: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v16 = ( unsigned int)( mode_class_0[mode] - 5) <= 1; 
                       ^~~~~~~~~~~~
                       mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/recog.c:3607:1: error: use of undeclared identifier 'search_ofs_1'
search_ofs_1 = v18; 
^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peep2_find_free_register/src/obj/recog.o] Error 1
